# colorbot

./: Cargo.toml  README.md  bot.sh  money_bot.sh  rstart.sh  shell.nix
.github/workflows/: release.yaml
scripts/: alchemy.json  bowls.json  canifis_agility.json  construction.json  cooking.json  farming.json  farming_setup.json  firemaking.json  firemaking_setup.json  fishing.json  fletching.json  gemstone_crab.json  gemstone_crab_exit.json  hunter.json  login.json  logout.json  logout2.json  mining.json  pickup.json  runecraft.json  runecraft_setup.json  sailing.json  sailing_setup.json  salvage.json  test_image.json  thieving.json  woodcutting.json
src/: config.rs  controls.rs  delay.rs  event.rs  geometry.rs  lib.rs  main.rs  special_actions.rs  vision.rs  windmouse.rs
