[package]
name = "colorbot"
version = "0.1.0"
edition = "2021"
description = "A OSRS color bot"
license = "Unlicense"

[dependencies]
rand = "0.8.5"
kurbo = "0.11.1"
scrap = "0.5.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
simplelog = "0.12.2"
log = "0.4.22"
clap = {version = "4.5.32", features = ["derive"]}
device_query = "3.0.1"
