[package]
name = "colorbot"
version = "0.1.0"
edition = "2021"
description = "A OSRS color bot"
license = "Unlicense"

[dependencies]
anyhow = "1.0"
rand = "0.10"
kurbo = "0.13"
scrap = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12"
log = "0.4"
clap = {version = "4.5", features = ["derive"]}
device_query = "4.0"
