[package]
name = "colorbot"
version = "0.4.0"
edition = "2021"
description = "A OSRS color bot"
license = "Unlicense"

[dependencies]
anyhow = "1.0"
rand = "0.10"
rand_distr = "0.6"
scrap = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12"
log = "0.4"
clap = {version = "4.6", features = ["derive"]}
device_query = "4.0"
enigo = "0.6"
image = "0.25"
imageproc = { version = "0.26", features = ["rayon"] }
